# UNIVERSITY_WORK--UBB_FMI--

./: LICENSE  README.md
1'st SEMESTER/CSA (Computer systems architecture)/A11/: README.md  p1.asm  p1_procedure.asm
1'st SEMESTER/CSA (Computer systems architecture)/A12/: README.md  main.c  modul.asm
1'st SEMESTER/CSA (Computer systems architecture)/A2/: README.md  p1.asm  p2.asm  p3.asm  p4.asm  p5.asm  p6.asm
1'st SEMESTER/CSA (Computer systems architecture)/A3/: README.md  p1.asm  p2.asm  p3.asm  p4.asm  p5.asm  p6.asm
1'st SEMESTER/CSA (Computer systems architecture)/A4/: p1.asm  p2.asm
1'st SEMESTER/CSA (Computer systems architecture)/A5/: README.md  p1.asm  p2.asm
1'st SEMESTER/CSA (Computer systems architecture)/A6/: README.md  p1.asm  p2.asm
1'st SEMESTER/CSA (Computer systems architecture)/A8/: README.md  p1.asm  p2.asm
1'st SEMESTER/PF (Programming Fundamentals)/A1/: p1.py  p2.py
1'st SEMESTER/PF (Programming Fundamentals)/A2/: program.py
1'st SEMESTER/PF (Programming Fundamentals)/A3/: README.md  program.py
1'st SEMESTER/PF (Programming Fundamentals)/A4/: README.md  functions.py  start.py  ui.py
1'st SEMESTER/PF (Programming Fundamentals)/A5/: README.md  domain.py  run.py  services.py  ui.py
1'st SEMESTER/PF (Programming Fundamentals)/A678/: README.md  domain.py  exceptions.py  repository.py  run.py  ui.py  (+4 more)
2'nd SEMESTER/GA (Graph Algorithms)/: README.md  Services.py  UI.py  exceptions.py  graph.py  graph.txt  main.py
2'nd SEMESTER/OOP ( Object Oriented Programming)/A3/: CMakeLists.txt  CSVRepository.cpp  CSVRepository.h  Event.cpp  Event.h  GUI.cpp  GUI.h  HTMLRepository.cpp  HTMLRepository.h  List.csv  List.html  README.md  Repo.cpp  Repo.h  RepoFile.cpp  RepoFile.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  domain.cpp  domain.h  events.txt  gui_ui.cpp  gui_ui.h  gui_ui.ui  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h  undoredo.cpp  undoredo.h  userRepo.cpp  userRepo.h  userService.cpp  (+3 more)
4'th SEMESTER/AI (Artificial Intelligence)/: README.md
4'th SEMESTER/SDI (Systems for Design and Implementation)/: FULL_PROJECT_LINK
(+541 files in other folders)
